Agrego Admin Vuelo

--- a/SistemaWebVuelos/SistemaWebVuelos.csproj
+++ b/SistemaWebVuelos/SistemaWebVuelos.csproj
@@ -115,6 +115,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Repositorio\AdminVuelo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
